# Indiana-University

./: .gitignore  LICENSE  README.md  run_solver.sh
Fall 2023/B503/Homework4/: Problem1.py  Problem2.py  Problem3.py  Problem4.py  Problem5.py  Problem6.py  Problem7.py
Fall 2023/B551/Assignment 2/: README.md
Fall 2023/B551/Assignment 2/Part1/: solve_fairies.py
Fall 2023/B551/Assignment 2/Part2/: test_a1_2023_puzzle.py
Fall 2023/B551/Assignment1/: README.md  map1.txt  map2.txt  mystical_castle.py  place_turrets.py  test_a0.py
Fall 2023/B551/Assignment2/: README.md  run_raichu.sh
Fall 2023/B551/Assignment2/Part2/: 8puzzle.py  another.py  board2.txt  board3.txt  solver2023.py  temp.txt  test_a1_2023_puzzle.py
Fall 2023/B551/Assignment2/Part3/: route.py
Fall 2023/B551/Assignment3/: README.md
Fall 2023/B551/Assignment4/: README.md  run_part2.sh
Fall 2023/B551/Assignment5/: README.md  k_nearest_neighbors.py  knn_digits_results.html  main.py  mlp_digits_results.html  mlp_iris_results.html  multilayer_perceptron.py  run_mlp.sh  utils.py  utils_p.py
Spring2024/B565/HW/: .gitignore  Readme.md  pyproject.toml
Spring2024/B565/HW/hw1/: bibliography.bib  jn1.ipynb  jn1_test_out.txt  jn1_test_out_timestamp.txt  jn2.ipynb  jn3.ipynb  nhaldert-bkgichin-everything.tex
Spring2024/B565/HW/hw2/: jn5.ipynb
Spring2024/B657/Assignment1/: README.md  extract.py  grade.py  inject.py  pyproject.toml  requirements.txt  run_extract.sh  run_grade.sh  run_inject.sh  scored.sh  test.py
Spring2024/B657/a-secret-message/: fourier2-1.py
(+9 files in other folders)
