[tool.poetry]
name = "data-mining-group-work"
version = "0.1.0"
description = ""
authors = ["tonmoy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.0"
numpy = "^1.26.3"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
pyarrow = "^15.0.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
